fix: modal z-index

--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -19,7 +19,7 @@
 
   &_active {
     transform: translateY(0%);
-    z-index: 40;
+    z-index: 99;
     opacity: 1;
     visibility: visible;
   }
